--- a/preamble.tex
+++ b/preamble.tex
@@ -41,6 +41,7 @@
 
 \usepackage{tikz} % Til grafer
 \usetikzlibrary{automata} % Til automatgrafer
+\usetikzlibrary{shapes.geometric} % Ellipse
 \usetikzlibrary{trees} % Til træstrukturer
 \usetikzlibrary{positioning} % Positionering af knuder
  \usetikzlibrary {graphs.standard}  % til grafer
